lock unlock api
